// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnderlineNavLink renders the given "is" prop 1`] = `
<b
  blacklist={
    Array [
      "color",
      "bg",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "css",
    ]
  }
  className="UnderlineNav-item no-underline emotion-0"
/>
`;

exports[`UnderlineNavLink respects the "selected" prop 1`] = `
<a
  blacklist={
    Array [
      "color",
      "bg",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "css",
    ]
  }
  className="UnderlineNav-item no-underline selected emotion-0"
/>
`;
